--- a/composer.json
+++ b/composer.json
@@ -19,5 +19,8 @@
     },
     "require":{
         "php": ">=5.3.0"
+    },
+    "autoload": {
+        "classmap": ["RequestTracker.php"]
     }
 }
