Added outline of new library structure.

--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,8 @@
         "ext-curl": "*"
     },
     "autoload": {
-        "classmap": ["RequestTracker.php"]
+        "psr-4": {
+          "Dersam\\RT\\":"src/Dersam/RT"
+        }
     }
 }
