--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,9 @@
         "php": ">=5.3.0",
         "ext-curl": "*"
     },
+    "require-dev":{
+      "phpunit/phpunit": "4.6.4"
+    },
     "autoload": {
         "psr-4": {
           "Dersam\\RT\\":"src/Dersam/RT"
