--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,11 @@ services:
   - docker
 
 php:
+  - '5.3'
+  - '5.4'
   - '5.5'
   - '5.6'
 
 before_install: docker run -it --rm --name rt -p 8080:80 netsandbox/request-tracker
 
-before_script: wget http://downloads.atoum.org/nightly/mageekguy.atoum.phar
+script: phpunit
