--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,6 @@ php:
   - '5.5'
   - '5.6'
 
-before_install: docker run -it --rm --name rt -p 8080:80 netsandbox/request-tracker
+before_install: docker run -dit --name rt -p 8080:80 netsandbox/request-tracker
 
 script: phpunit
