--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,6 @@
     "name": "dersam/rt-php-lib",
     "type": "library",
     "description": "Wrapper class for Request Tracker REST API",
-    "version": "1.2.0",
     "keywords": ["request tracker","rest","rt","rt3","rt4"],
     "homepage":  "http://dersam.github.com/RTPHPLib/",
     "license": "MIT",
@@ -17,7 +16,7 @@
         "issues":"https://github.com/dersam/RTPHPLib/issues"
     },
     "require":{
-        "php": ">=5.3.0",
+        "php": ">=5.3.0"
 
     },
     "autoload": {
