--- a/.travis.yml
+++ b/.travis.yml
@@ -11,3 +11,11 @@ php:
   - '7.0'
 
 before_install: docker run -dit --name rt -p 8080:80 netsandbox/request-tracker
+
+script:
+  - phpunit --coverage-text --coverage-clover=coverage.clover
+
+after_script:
+  - wget https://scrutinizer-ci.com/ocular.phar
+  - php ocular.phar code-coverage:upload --format=php-clover coverage.clover
+
